--- a/ngApp/src/app/app.component.html
+++ b/ngApp/src/app/app.component.html
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Authentication</a>
+  <a class="navbar-brand" href="" style="color:blue">Authentication</a>
 
   <div class="collapse navbar-collapse">
+    <!--
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
         <a class="nav-link" routerLink="#" routerLinkActive="active">Test1</a>
@@ -10,10 +11,14 @@
         <a class="nav-link" routerLink="#" routerLinkActive="active">Test2</a>
       </li>
     </ul>
-
+    -->
     <ul class="navbar-nav">
-      <a class="nav-item" routerLink="/register" routerLinkActive="active">Register</a>
-      <a class="nav-item" routerLink="/login"    routerLinkActive="active">Login</a>
+      <li class="nav-item">
+        <a class="nav-link active" routerLink="/register" routerLinkActive="active">Register</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" routerLink="/login"    routerLinkActive="active">Login</a>
+      </li>      
     </ul>
   </div>
 
