--- a/ngApp/src/app/app.component.html
+++ b/ngApp/src/app/app.component.html
@@ -1,7 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="" style="color:blue">Authentication</a>
+  
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+  </button>
 
-  <div class="collapse navbar-collapse">
+  <div class="collapse navbar-collapse" id="navbarNav">
     <!--
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
@@ -11,14 +15,18 @@
         <a class="nav-link" routerLink="#" routerLinkActive="active">Test2</a>
       </li>
     </ul>
-    -->
+    -->    
     <ul class="navbar-nav">
-      <li class="nav-item">
+      <!--<li class="nav-item" [style.visibility]="loggedIn?'hidden':'visible'">-->
+      <li class="nav-item" [ngStyle]="{'visibility':isLoggedIn()?'hidden':'visible'}">
         <a class="nav-link active" routerLink="/register" routerLinkActive="active">Register</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" [ngStyle]="{'visibility':isLoggedIn()?'hidden':'visible'}">
         <a class="nav-link active" routerLink="/login"    routerLinkActive="active">Login</a>
       </li>      
+      <li class="nav-item" [ngStyle]="{'visibility':isLoggedIn()?'visible':'hidden'}">
+        <a class="nav-link active" (click)="logOutUser()" routerLink="/login">Logout</a>
+      </li>
     </ul>
   </div>
 
