--- a/ngApp/src/app/login/login.component.html
+++ b/ngApp/src/app/login/login.component.html
@@ -7,6 +7,7 @@
 			</div>
 
 			<div class="card-body">
+				<!--
 				<form class="form">
 					<div class="form-group">
 						<label>Email</label>
@@ -18,6 +19,29 @@
 					</div>
 				</form>	
 				<button (click)="loginUser()" type="button" class="btn btn-primary float-left">Login</button>
+				-->
+				<form [formGroup]='loginForm' (ngSubmit)="loginUser()">
+					<div class="form-group">
+						<label>Email</label>
+						<input type="text" formControlName="email" class="form-control"
+						[ngClass]="{ 'is-invalid': isSubmitted && f.email.errors }">
+						<div *ngIf="isSubmitted && f.email.errors" class="invalid-feedback">
+							<div *ngIf="f.email.errors.required">Email is required</div>
+							<div *ngIf="f.email.errors.email">Email is invalid</div>
+						</div>
+					</div>
+					<div class="form-group">
+						<label>Password</label>
+						<input type="password" formControlName="password" class="form-control"
+						[ngClass]="{ 'is-invalid': isSubmitted && f.password.errors }">
+						<div *ngIf="isSubmitted && f.password.errors" class="invalid-feedback">
+							<div *ngIf="f.password.errors.required">Password is required</div>
+						</div>
+					</div>
+					<div class="form-group">
+						<button class="btn btn-primary">Login</button>
+					</div>
+				</form>
 			</div>
 
 		</div>
