--- a/ngApp/src/app/register/register.component.html
+++ b/ngApp/src/app/register/register.component.html
@@ -6,7 +6,41 @@
 				<h3 class="mb-0">Register</h3>
 			</div>
 
-			<div class="card-body">
+			<div class="card-body">				
+				<form [formGroup]='registerForm' (ngSubmit)="registerUser()">
+					<div class="form-group">
+						<label>Email</label>
+						<input type="text" formControlName="email" class="form-control"
+						[ngClass]="{ 'is-invalid': isSubmitted && f.email.errors }">
+						<div *ngIf="isSubmitted && f.email.errors" class="invalid-feedback">
+							<div *ngIf="f.email.errors.required">Email is required</div>
+							<div *ngIf="f.email.errors.email">Email is invalid</div>
+						</div>
+					</div>
+					<div class="form-group">
+						<label>Password</label>
+						<input type="password" formControlName="password" class="form-control"
+						[ngClass]="{ 'is-invalid': isSubmitted && f.password.errors }">
+						<div *ngIf="isSubmitted && f.password.errors" class="invalid-feedback">
+							<div *ngIf="f.password.errors.required">Password is required</div>
+							<div *ngIf="f.password.errors.minlength">Password has to be 6 charactors long</div>
+						</div>
+					</div>
+					<div class="form-group">
+						<label>Confirm Password</label>
+						<input type="password" formControlName="confirmPassword" class="form-control"
+						[ngClass]="{'is-invalid': isSubmitted && f.confirmPassword.errors}">
+						<div *ngIf="isSubmitted && f.confirmPassword.errors" class="invalid-feedback">
+							<div *ngIf="f.confirmPassword.errors.required">Password confirmation is required</div>
+							<div *ngIf="f.confirmPassword.errors.mustMatch">Password confirmation doesn't match</div>
+						</div>
+					</div>
+					<div class="form-group">
+						<button class="btn btn-primary">Register</button>
+					</div>
+				</form>
+
+				<!--
 				<form class="form">
 					<div class="form-group">
 						<label>Email</label>
@@ -18,6 +52,7 @@
 					</div>
 				</form>	
 				<button (click)="registerUser()" type="button" class="btn btn-primary float-left">Register</button>
+				-->
 			</div>
 
 		</div>
