--- a/ngApp/src/app/user-detail/user-detail.component.html
+++ b/ngApp/src/app/user-detail/user-detail.component.html
@@ -20,6 +20,9 @@
 						<td class="col">
 							<button class="btn btn-primary" (click)="editMode?updateUser():isEditMode()">{{editMode?'Save':'Edit'}}</button>
 						</td>
+						<td class="col">
+							<button class="btn btn-primary" data-toggle="modal" data-target="#deleteConfirm">Delete</button>
+						</td>
 					</tr>
 				</table>				
 				<!--
@@ -38,4 +41,26 @@
 			</div>
 		</div>
 	</div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="deleteConfirm" tabindex="-1" role="dialog" aria-labelledby="deleteConfirmLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+
+      <div class="modal-header">
+        <h5 class="modal-title" id="deleteConfirmLabel">Are you sure to delete User:</h5>
+      </div>
+
+      <div class="modal-body">
+        <h5>Email:{{currentUserInfo.email}}</h5>
+      </div>
+
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+        <button type="button" (click)="deleteUser()" class="btn btn-primary" data-dismiss="modal">Delete</button>
+      </div>
+
+    </div>
+  </div>
 </div>
